--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,16 +5,17 @@ phases:
     commands:
       # install node packages
       - npm i 
-      # install lambda dependecy, may be do it using venv
-      - pip install -r src/lambda/requirements.txt -t src/lambda/
-      - zip -r src/lambda/demo_lambda.zip src/lambda/
   build:
     commands:
       - echo Build started on `date`
+      # install lambda dependecy, may be do it using venv
+      - pip install -r src/lambda/requirements.txt -t src/lambda/
+      - zip -r src/lambda/demo_lambda.zip src/lambda/
+      - npm install -g aws-cdk
       - cdk synth
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
   files:
-    -
+    - 
