Installing dependencies for lambda layer and listing environment variables

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       # install node packages
       - npm i 
       - npm install -g aws-cdk
+      - printenv
   build:
     commands:
       - bash scripts/deploy.sh
