--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "cdk-demo-project",
+  "name": "pnl_iot_assignment",
   "version": "0.1.0",
   "bin": {
-    "cdk-demo-project": "bin/cdk-demo-project.js"
+    "pnl_iot_assignment": "bin/pnl_iot_assignment.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest --coverage --verbose && :",
-    "test:update": "jest -u --coverage --verbose && :",
+    "test": "jest",
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "2.50.0-alpha.0",
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.11.18",
-    "aws-cdk": "2.50.0",
+    "aws-cdk": "2.61.1",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "2.50.0-alpha.0",
-    "aws-cdk-lib": "^2.90.0",
-    "constructs": "10.0.0",
-    "esbuild": "^0.18.18",
+    "aws-cdk-lib": "2.61.1",
+    "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
 }
